TestCases and additional commentary.